solved some sidebar and profile bugs, working on mobile responsiveness

--- a/react-app/src/components/Navigation/Nav.css
+++ b/react-app/src/components/Navigation/Nav.css
@@ -1,7 +1,7 @@
 nav {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   padding: 20px;
   background-color: #1f878f;
@@ -11,22 +11,26 @@ nav {
 }
 
 #mysampler-logo {
-  height: 100px;
+  height: 5rem;
   width: auto;
   margin-right: 5px;
   position: sticky;
 }
-.home-link {
+.home-link,
+.ham-icon {
   text-decoration: none;
   color: white;
-  font-size: 75px;
+  font-size: 4rem;
   transition: 0.5s;
 }
-.home-link:hover {
+.ham-icon{
+  margin-right: 50px;
+}
+.home-link:hover,
+.ham-icon:hover {
   color: #ad9889;
   cursor: pointer;
 }
-
 #nav-wrap{
   display: flex;
   flex-direction: row;
